semgrep/tests/e2e/snapshots/test_semgrep_core_parse_error/test_rule_parser__failure__error_messages/invalid_python.py/error.txt
running 2 rules...
semgrep warn: parse error
  --> targets/bad/invalid_python.py:1
1 | def foo(a)
  |           ^^^^^
= help: If the code appears to be valid, this may be a semgrep bug.
Could not parse invalid_python.py as python

